{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 13,
  "lineage": "42eefc63-771a-ac76-aa0e-2e2fa812898d",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423598633:network-acl/acl-06110f72c1bb91ba0",
            "default_network_acl_id": "acl-06110f72c1bb91ba0",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06110f72c1bb91ba0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "637423598633",
            "subnet_ids": [
              "subnet-0ace3a0e5fc72463c",
              "subnet-0ce167aaf19139842"
            ],
            "tags": {
              "Name": "my-vpc-public-subnets"
            },
            "tags_all": {
              "Name": "my-vpc-public-subnets"
            },
            "vpc_id": "vpc-051670d4810ef2a6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423598633:route-table/rtb-0c695a9c452d36f1e",
            "default_route_table_id": "rtb-0c695a9c452d36f1e",
            "id": "rtb-0c695a9c452d36f1e",
            "owner_id": "637423598633",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "my-vpc-public-subnets"
            },
            "tags_all": {
              "Name": "my-vpc-public-subnets"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-051670d4810ef2a6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423598633:security-group/sg-05bd0bba286ff885c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-05bd0bba286ff885c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "637423598633",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-vpc-public-subnets"
            },
            "tags_all": {
              "Name": "my-vpc-public-subnets"
            },
            "vpc_id": "vpc-051670d4810ef2a6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423598633:internet-gateway/igw-0e996874b71898f30",
            "id": "igw-0e996874b71898f30",
            "owner_id": "637423598633",
            "tags": {
              "Name": "my-vpc-public-subnets"
            },
            "tags_all": {
              "Name": "my-vpc-public-subnets"
            },
            "vpc_id": "vpc-051670d4810ef2a6a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e996874b71898f30",
            "id": "r-rtb-078465829fcb165a31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-078465829fcb165a3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423598633:route-table/rtb-074de9bea57bf2521",
            "id": "rtb-074de9bea57bf2521",
            "owner_id": "637423598633",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-vpc-public-subnets"
            },
            "tags_all": {
              "Name": "my-vpc-public-subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-051670d4810ef2a6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423598633:route-table/rtb-078465829fcb165a3",
            "id": "rtb-078465829fcb165a3",
            "owner_id": "637423598633",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-vpc-public-subnets"
            },
            "tags_all": {
              "Name": "my-vpc-public-subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-051670d4810ef2a6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01538c8c9bdb1e3e7",
            "route_table_id": "rtb-074de9bea57bf2521",
            "subnet_id": "subnet-0ce167aaf19139842"
          },
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062ba089e3ddcb307",
            "route_table_id": "rtb-078465829fcb165a3",
            "subnet_id": "subnet-0ace3a0e5fc72463c"
          },
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423598633:subnet/subnet-0ce167aaf19139842",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce167aaf19139842",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423598633",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-public-subnets"
            },
            "tags_all": {
              "Name": "my-vpc-public-subnets"
            },
            "vpc_id": "vpc-051670d4810ef2a6a"
          },
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423598633:subnet/subnet-0ace3a0e5fc72463c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ace3a0e5fc72463c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423598633",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-public-subnets"
            },
            "tags_all": {
              "Name": "my-vpc-public-subnets"
            },
            "vpc_id": "vpc-051670d4810ef2a6a"
          },
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423598633:vpc/vpc-051670d4810ef2a6a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06110f72c1bb91ba0",
            "default_route_table_id": "rtb-0c695a9c452d36f1e",
            "default_security_group_id": "sg-05bd0bba286ff885c",
            "dhcp_options_id": "dopt-0a1c274169889a489",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-051670d4810ef2a6a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c695a9c452d36f1e",
            "owner_id": "637423598633",
            "tags": {
              "Name": "my-vpc-public-subnets"
            },
            "tags_all": {
              "Name": "my-vpc-public-subnets"
            }
          }
        }
      ]
    }
  ]
}